[project]
name = "langgraph-quick"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-anthropic>=0.2.1",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.26",
    "langsmith>=0.1.125",
    "python-dotenv>=1.0.1",
    "tavily-python>=0.5.0",
    "typing-extensions>=4.12.2",
]
